the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: the-project
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
